--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-  <div class="popup_hidden">          
+  <div class="popup hidden">          
     <form class="popup-form">      
-      <button class="popup-close"></button>      
+      <button class="popup-close" alt="Кнопка закрытия всплывающего окна"></button>      
       <div class="popup-information">
         <span class="section-title-top">Ваш фидбек</span>
         <div class="form-row">
